--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
+SECRET_KEY=django-insecure
+DEBUG=TRUE
+ALLOWED_HOSTS=127.0.0.1 localhost mywebsite.com 51.128.109.62
 POSTGRES_DB=kittygram
 POSTGRES_USER=kittygram_user
 POSTGRES_PASSWORD=kittygram_password
 DB_NAME=kittygram
+DB_HOST=db
+DB_PORT=5432
