--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,10 @@
 server {
   listen 80;
   index index.html;
+  server_tokens off;
 
   location /api/ {
-   client_max_body_size 20M;
+    client_max_body_size 20M;
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
